packages/admin-ui-docs/versioned_docs/version-0.134.0/documentation/developing/styling.mdx
---
title: Styling
path: /developing/styling/
sidebar_position: 4
---

The admin-ui `StyleObject` lets you style elements while consuming values from the theme.

```jsx live
<Box
  csx={{
    ...palette('pink'),
    borderRadius: 4,
    padding: '10px',
  }}
>
  styled box
</Box>
```

## Design tokens

Design tokens can be consumed from specific properties within the `StyleObject`. They are the recommended values for those props if you desire to reach consistency between apps. These are defined within our `default theme`, and you can check all the available design tokens on the [link](design-tokens/).

```jsx live
<Box
  csx={{
    color: '$primary',
    bg: '$primary',
    border: '$neutral',
    borderRadius: '$default',
    padding: '$3',
  }}
>
  styled box
</Box>
```

## Aliases

It works as a shorthand to apply a value to one or more CSS properties, and you can use it within the `StyleObject`. In addition to the following aliases, you can also use the [Responsive Aliases](#responsive-aliases) explained further on this page.

| Alias          | Description                                                                                                        |
| -------------- | ------------------------------------------------------------------------------------------------------------------ |
| `bg`           | A shorthand for background CSS property                                                                            |
| `fg`           | A shorthand for color CSS property                                                                                 |
| `colorTheme`   | A shorthand for applying color and background properties from the same palette while mantaining design consistency |
| `marginX`      | A shorthand for margin-left and margin-right CSS properties                                                        |
| `marginY`      | A shorthand for margin-top and margin-bottom CSS properties                                                        |
| `paddingX`     | A shorthand for padding-left and padding-right CSS properties                                                      |
| `paddingY`     | A shorthand for padding-top and padding-bottom CSS properties                                                      |
| `size`         | A shorthand for width and height CSS properties                                                                    |
| `minSize`      | A shorthand for min-width and min-height CSS properties                                                            |
| `maxSize`      | A shorthand for max-width and max-height CSS properties                                                            |
| `absoluteSize` | A shorthand for min-width, min-height, max-Width, and max-Height CSS properties                                    |

### Example

```jsx live
<Center
  csx={{
    size: 100,
    paddingX: '$m',
    paddingY: '$l',
    bg: '$blue40',
    fg: '$white',
  }}
>
  Aliases
</Center>
```

## Nesting

Sometimes it’s useful to nest selectors to target elements inside the current class or React component. An example with an element selector is shown below.

```jsx live
<Box
  csx={{
    button: {
      padding: '$1',
      margin: '$1',
      cursor: 'pointer',
      borderRadius: '$default',
      bg: '$muted',
      color: '$base',
    },
    header: {
      button: {
        bg: '$gray60',
        color: '$white',
      },
    },
  }}
>
  <header>
    <button>dark button</button>
  </header>
  <button>light button</button>
</Box>
```

## className

Scoped classNames can also be created and reused multiple times.

```jsx live
<Box
  csx={{
    display: 'flex',
    '.button': {
      padding: 1,
      borderRadius: 'default',
      cursor: 'pointer',
      textDecoration: 'none',
      '+ .button': {
        marginLeft: 2,
      },
    },
    '.light': {
      bg: '$secondary',
      color: '$secondary',
    },
    '.dark': {
      bg: '$gray60',
      color: '$white',
    },
  }}
>
  <button className="button dark">dark button</button>
  <button className="button light">light button</button>
  <a className="button dark">link dark button</a>
</Box>
```

## Pseudo-classes

You can use all [CSS Pseudo-classes](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes) such as `:hover`, `:active`, `:focus` and more. For example:

```jsx live
<Box
  csx={{
    ...palette('cyan'),
    padding: 1,
    size: 64,
    transition: 'snap',
    ':hover': {
      transform: 'scale(1.2)',
    },
  }}
>
  Scales on :hover
</Box>
```

## Pseudo-elements

You can use all [CSS Pseudo-elements](https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements) such as `:before` and `:after`. For example:

```jsx live
<Box
  csx={{
    boxSizing: 'border-box',
    position: 'relative',
    display: 'block',
    transform: 'scale(1)',
    width: '22px',
    height: '22px',
    ':before, &:after': {
      content: '""',
      display: 'block',
      boxSizing: 'border-box',
      position: 'absolute',
      left: '3px',
    },
    ':after': {
      width: '8px',
      height: '8px',
      borderBottom: '2px solid',
      borderLeft: '2px solid',
      transform: 'rotate(45deg)',
      bottom: '7px',
    },
    ':before': {
      width: '16px',
      height: '2px',
      bottom: '10px',
      background: 'currentColor',
    },
  }}
/>
```

## Animations

### Keyframes

[CSS animations](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Animations/Using_CSS_animations#configuring_the_animation) are supported. You can use the `keyframes` function to configure the sequence timing.

```jsx live noInline
// import { keyframes } from '@vtex/admin-ui'

const pulse = keyframes({
  '0%': { transform: 'scale(0.90)' },
  '50%': { transform: 'scale(1)' },
  '100%': { transform: 'scale(0.90)' },
})

function Example() {
  return (
    <Box
      csx={{
        ...palette('purple'),
        width: '5rem',
        padding: '$s',
        animation: `${pulse} 1s infinite`,
        borderRadius: '$default',
      }}
    >
      Pulse effect
    </Box>
  )
}

render(<Example />)
```

## Responsive design

### Responsive aliases

Admin UI has five responsive aliases that guide you while authoring responsive layouts.

| alias          | min-width em | min-width px | max-width em | max-width px |
| -------------- | ------------ | ------------ | ------------ | ------------ |
| `@tablet`      | `48em`       | `768px`      | -            | -            |
| `@tabletOnly`  | `48em`       | `768px`      | `64em`       | `1024px`     |
| `@desktop`     | `64em`       | `1024px`     | -            | -            |
| `@desktopOnly` | `64em`       | `1024px`     | `75em`       | `1200px`     |
| `@widescreen`  | `75em`       | `1200px`     | -            | -            |

In the example - the text content changes, representing the current screen size. You can resize your browser window to see the result.

```jsx live
<Box
  csx={{
    ':before': {
      content: '"Mobile"',
      '@tablet': { content: '"Tablet"' },
      '@desktop': { content: '"Desktop"' },
      '@widescreen': { content: '"Widescreen"' },
    },
  }}
/>
```

<details>
  <summary>💡 What happens under the hood?</summary>
  <div>
    <p>
      The responsive alias string will be replaced by a media query.
      <br />
      It replaces the pattern <strong>@[alias]</strong> by{' '}
      <strong>@media (min-width: theme.breakpoints[alias])</strong>.
      <br />
      For exemple, <strong>@tablet</strong> will be replaced by{' '}
      <strong>@media (min-width: 48em)</strong>.
    </p>
    <br />
    <p>
      The same idea applies to the <strong>only</strong> aliases! The diference
      is that it set the next breakpoint's <strong>min-width</strong> as its{' '}
      <strong>max-width</strong>, creating a interval.
      <br />
      For exemple, <strong>@tabletOnly</strong> will be replaced by{' '}
      <strong>@media (min-width: 48em) and (max-width: 64em)</strong>.
    </p>
  </div>
</details>

### Mental model

Our styles have a mobile-first mindset. It means that every style that you write targets mobile by default. Each responsive alias targets all others above it so that you can work in optimizing your layout for larger screens. In other words, **always work optimizing space**.

The `Box` in the example has the `$s` padding for all screens:

```jsx
<Box
  csx={{
    padding: '$s',
  }}
/>
```

If we add the `@tablet` rule, the padding will be `$m` for tablets and above - which means that it will remain `$s` for screens smaller than `@tablet`. The logic is still the same for other breakpoints.

```jsx
<Box
  csx={{
    padding: '$s',
    '@tablet': {
      padding: '$m',
    },
  }}
/>
```

### Custom media queries

The [responsive aliases](#responsive-aliases) can cover most of the use cases, but custom media queries are allowed if you want to target specific devices on your design. For example:

```js
// declaration
const iPhoneXRLandscape = `
  @media only screen
  and (device-width : 414px)
  and (device-height : 896px)
  and (-webkit-device-pixel-ratio : 2)
  and (orientation : landscape)
`

// usage
const layout = style({
  // ... component styles,
  [iPhoneXRLandscape]: {
    // ... device specyfic styles
  },
})
```

### Responsive Prop

Properties of components with the type `ResponsiveProp<T>` indicate that you can use them to behave similarly to responsive aliases by passing different values ​​depending on the screen size
You can [check the mental model section](#mental-model) to see how the responsiveness works in these cases.

```ts
interface ResponsiveProp<T> = T | {
  mobile: T
  tablet?: T
  desktop?: T
  widescreen?: T
}
```

#### Example

```jsx live
<Stack
  space={{ mobile: '$l', desktop: '$2xl' }}
  fluid={{ mobile: true, tablet: false }}
  direction={{ mobile: 'column', tablet: 'row' }}
>
  <Button>First</Button>
  <Button>Second</Button>
  <Button>Third</Button>
  <Button>Fourth</Button>
  <Button>Fifth</Button>
</Stack>
```

### Additional resources

- [Learn responsive design](https://web.dev/learn/design/).
- [Using media queries](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries)
